--- a/movieDash/package.json
+++ b/movieDash/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@headlessui/react": "^2.2.9",
     "axios": "^1.12.2",
+    "firebase": "^12.4.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
